docs(results): entity-read-by-id constrained-axes data dossier (WIP) (#14)
Add the 2026-06-23 constrained-axes data-collection dossier for entity-read-by-id
(cgroup CPU/memory limits) plus its evidence schema and constrained runner.

This is a data-collection document — claim_scope: descriptive_only, dev-laptop,
within-tier, reproducibility_status: partial — NOT a published comparison. Numbers
are directional; JFR steady-state proof was OFF for constrained runs to fit the cgroup
budget, so no 'C2 settled' claim for constrained rows. Not comparison_eligible (reserved
for perf-box-amd64), so the comparative strict gate does not apply.

- results/reports/2026-06-23-entity-read-by-id-constrained-axes-data.md — the dossier
  (documents the tuning journey: GC sweep, OOM-in-teardown, SIGSEGV, DB-pool exhaustion)
- schemas/constrained-execution-evidence.schema.json — evidence shape for constrained runs
- scripts/run-entity-read-by-id-constrained.sh — constrained (cgroup-capped) runner

Raw run data is intentionally NOT committed (report is WIP; run<->data mapping pending);
JFR / k6-stream / sampler blobs are gitignored regardless.

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>